[package]
name = "oauth-google-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
base64 = "0.13"
clap = { version = "3.1.12", features = ["derive"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["rt", "macros", "rt-multi-thread"] }
url = "2.2"
